[package]
name = "msaada"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Bruijn <vebruijn@gmail.com>"]
description = "Serve a directory as document root over a given port. This is a development tool."
homepage = "https://github.com/y-a-v-a/msaada"
repository = "https://github.com/y-a-v-a/msaada"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
awc = "3" # Actix Web Client for self-testing
env_logger = "0.10"
log = "0.4"
clap = "4.4.3"
futures-util = "0.3"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
bytes = "1.0"

[profile.release]
opt-level = 3
