[package]
name = "msaada"
version = "0.3.1"
edition = "2021"
authors = ["Vincent Bruijn <vebruijn@gmail.com>"]
description = "Serve a directory as document root over a given port. This is a development tool."
homepage = "https://github.com/y-a-v-a/msaada"
repository = "https://github.com/y-a-v-a/msaada"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-files = "0.6"
actix-multipart = "0.6"
awc = "3" # Actix Web Client for self-testing
env_logger = "0.10"
log = "0.4"
clap = "4.4.3"
futures-util = "0.3"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }

# New dependencies for enhanced features
actix-web-httpauth = "0.8"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
colored = "2.0"
jsonschema = "0.17"
port_check = "0.1"
local-ip-address = "0.5"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6"
flate2 = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
atty = "0.2"
p12 = "0.6"
regex = "1.10"

[dev-dependencies]
# Existing test dependency
tempfile = "3.0"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Async testing utilities
tokio-test = "0.4"

# Certificate generation for SSL tests
rcgen = "0.12"

# Additional assertions
assert_matches = "1.5"

# File system utilities
walkdir = "2.0"

# Network testing
port_scanner = "0.1"

# JSON path assertions - commented out due to version conflicts
# serde_json_path = "0.6"  # Will use serde_json directly for JSON testing

# Certificate utilities for HTTPS tests (rustls-pemfile already in main deps)
# openssl = "0.10"  # Commented out due to system dependency issues - use rustls instead

[profile.release]
opt-level = 3
